[project]
name = "llm-tests"
version = "0.0.1"
authors = [
  { name="Chris Randall", email="" },
]
description = "LLM Tests"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/mr-randall/llm-tests"
Issues = "https://github.com/mr-randall/llm-tests/issues"
Source = "https://github.com/mr-randall/llm-tests"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"